Refactor the base of the project to compose

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_greet2">GreetActivity2</string>
+    <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_browse_screen">BrowseScreen</string>
 </resources>
