Remove unused strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">Bootcamp</string>
+    <string name="app_name">StudHub</string>
     <string name="title_activity_maps">MapsActivity</string>
-    <string name="title_activity_main2">MainActivity2</string>
-    <string name="title_activity_greet">GreetActivity2</string>
-    <string name="title_activity_home_screen">HomeScreen</string>
-    <string name="title_activity_browse_screen">BrowseScreen</string>
+    <string name="title_activity_main2">MainActivity</string>
+    <string name="title_activity_greet">GreetActivity</string>
 </resources>
+
