--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Bootcamp</string>
+    <string name="app_name">StudHub</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_main2">MainActivity</string>
+    <string name="title_activity_greet">GreetActivity</string>
     <string name="title_activity_register_user">RegisterUserActivity</string>
 </resources>
