--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_greet">GreetActivity</string>
     <string name="title_activity_register_user">RegisterUserActivity</string>
+    <string name="title_activity_create_listing">CreateListingActivity</string>
 </resources>
