--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_activity_greet">GreetActivity</string>
     <string name="title_activity_register_user">RegisterUserActivity</string>
     <string name="title_activity_create_listing">CreateListingActivity</string>
+    <string name="title_activity_browse">BrowseActivity</string>
+    <string name="title_activity_detailed_listing_view">DetailedListingView</string>
 </resources>
