Added valid phone number verification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">StudHub</string>
     <string name="title_activity_maps">MeetingPointPickerActivity</string>
@@ -9,5 +8,5 @@
     <string name="title_activity_create_listing">CreateListingActivity</string>
     <string name="title_activity_browse">BrowseActivity</string>
     <string name="title_activity_detailed_listing_view">DetailedListingView</string>
-
+    <string name="profile_edit_form_error_invalid_phone">Please enter a valid Swiss phone number</string>
 </resources>
