--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">StudHub</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_maps">MeetingPointPickerActivity</string>
     <string name="title_activity_home_page">HomePageActivity</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_greet">GreetActivity</string>
@@ -9,4 +9,5 @@
     <string name="title_activity_create_listing">CreateListingActivity</string>
     <string name="title_activity_browse">BrowseActivity</string>
     <string name="title_activity_detailed_listing_view">DetailedListingView</string>
+
 </resources>
